src/objects/Critical_Item_Reviewer__c.object
<CustomObject>
    <description>Critical Item Reviewers</description>
    <fields>
        <fullName>Critical_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Critical Item</label>
        <referenceTo>Critical_Issues__c</referenceTo>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewing_Office__c</fullName>
        <label>Reviewing Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Audit Group</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Exec Sec</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>OHRM</fullName>
                </value>
                <value>
                    <fullName>OMA</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>TTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Critical Item Reviewer</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reviewer#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Item Reviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Critical_Item_Reviewer_lookup_value</fullName>
        <active>true</active>
        <description>Need to validate the Critical Item look up shouldn&apos;t be changed from EDIT page.</description>
        <errorConditionFormula>IF( ISNEW() , false,  ISCHANGED( Critical_Item__c ) )</errorConditionFormula>
        <errorDisplayField>Critical_Item__c</errorDisplayField>
        <errorMessage>You are not authorized to change the Critical Item look up record. Please go to the Critical Item record and add the Critical Item Reviewer from the related list.</errorMessage>
    </validationRules>
</CustomObject>